# Yggdrasil

./: .gitignore  =4.0  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  tsconfig.json  userinfo.py
cython/: README.md  pyproject.toml  setup.py
cython/src/_yggcy/: __init__.py
cython/src/_yggcy/io/: __init__.py
js/: Cargo.toml  README.md
js/src/: lib.rs
programs/clicknir/: Cargo.toml  README.md
programs/clicknir/src/: clicker.rs  main.rs  ui.rs
python/: .gitignore  Cargo.toml  README.md  mkdocs.yml  pyproject.toml  setup.py
python/benchmarks/: bench_castoptions.py  bench_databricks_insert_staging.py  bench_engine_type_bypass.py  bench_equals.py  bench_node.py  run_all.py  update_readme.py
python/benchmarks/arrow/: bench_arrow_cast.py  bench_arrow_ops.py
python/benchmarks/bot/: RESULTS.md  bench_analysis.py  bench_analysis_cache.py  bench_audit_writes.py  bench_bot_messenger.py  bench_bot_messenger_sse.py  bench_bot_trading.py  bench_bot_transport.py  bench_fs_ls.py  bench_fs_paging.py  bench_fs_read.py  bench_indicators.py  bench_market_ai.py  bench_node_functions.py  bench_node_integration.py  bench_tabular_inspect.py  bench_technical.py  bench_trading.py  bench_trading_ai.py  bench_v2_endpoints.py
python/benchmarks/bot_v2/: bench_bot_v2_endpoints.py  bench_market_signal.py
python/benchmarks/cli/: bench_style.py
python/benchmarks/concurrent/: bench_concurrent.py
python/benchmarks/data/: bench_cast.py  bench_cast_caches.py  bench_cast_data.py  bench_cast_edges.py  bench_cast_temporal.py  bench_castoptions.py  bench_datatype.py  bench_datatype_cast.py  bench_engine_type_bypass.py  bench_equals.py  bench_field.py  bench_merge.py  bench_registry.py  bench_spark.py  bench_statement.py
python/benchmarks/data/enums/: bench_enums.py  bench_mime_media.py
python/benchmarks/data/types/: bench_data_type_construct.py  bench_parser.py
python/benchmarks/databricks/: bench_async_insert.py  bench_copy_into.py  bench_databricks_client.py  bench_databricks_insert_staging.py  bench_databricks_paths.py  bench_databricks_sql.py  bench_databricks_volume_external_storage.py  bench_databricks_volume_random_io.py  bench_databricks_volume_sdk_compare.py  bench_databricks_volume_tabular_io.py  bench_databricks_warehouse.py  bench_schema_session.py  bench_warehouse_fetch.py
python/benchmarks/dataclasses/: bench_dataclasses.py  bench_expiring_contention.py  bench_safe_function.py
python/benchmarks/entsoe/: bench_entsoe_frames.py
python/benchmarks/environ/: bench_environ.py
python/benchmarks/fxrate/: bench_fxrate.py
python/benchmarks/http_/: _bench_stub_session.py  bench_http.py  bench_http_cache.py  bench_http_integration_send.py  bench_http_live.py  bench_http_memory.py  bench_http_pool.py  bench_http_wire.py  bench_response_cache.py  bench_session_cache_spark.py  bench_spark_send.py
python/benchmarks/io/: _bench_http_server.py  _bench_stub_session.py  _common.py  bench_arrow_ipc.py  bench_csv.py  bench_http.py  bench_http_cache.py  bench_http_concurrent.py  bench_http_live.py  bench_io.py  bench_io_holder.py  bench_io_memory.py  bench_json.py  bench_ndjson.py  bench_parquet.py  bench_parquet_folder.py  bench_parquet_folder_concurrent.py  bench_session_cache_spark.py  bench_spark_send.py  bench_tabular_conversions.py  bench_tabular_zero_copy.py  bench_xlsx_edit.py  bench_zero_copy.py
python/benchmarks/io/curation/: bench_curation.py
python/benchmarks/io/delta/: bench_delta.py  bench_delta_concurrency.py  bench_delta_noregression.py  bench_delta_read_pruning.py  bench_delta_scale.py  bench_delta_skipping.py
python/benchmarks/io/nested/: bench_delta.py  bench_delta_noregression.py  bench_io_nested.py
python/benchmarks/io/path/: bench_io_local.py  bench_io_local_fs.py  bench_io_path.py  bench_io_remote.py  bench_remote_databricks.py  bench_remote_path.py
python/benchmarks/loki/: bench_resources.py
python/benchmarks/pickle/: bench_pickle_ser.py  bench_serde.py
python/benchmarks/plan/: bench_sql_parser.py
python/benchmarks/polars/: bench_polars_cast.py
python/benchmarks/saga/: bench_saga.py  bench_saga_cluster.py  bench_saga_http.py  bench_saga_memory.py
python/docs/: README.md  databricks.md  dataclasses.md  developer-templates.md  getting-started.md  index.md  libs.md  modules.md  pyutils.md  requests.md  saga.md  ser.md  types.md
python/docs/_scripts/: gen_ref_pages.py
python/docs/api/: index.md
python/docs/guides/: architecture.md  bot.md  casting.md  data-model.md  databricks-cli.md  databricks.md  development.md  io-http.md  loki.md  node.md  plan.md  saga.md
python/docs/modules/: README.md
python/rust/: README.md
python/rust/yggdrasil_rust/: Cargo.toml
python/scripts/: build_serverless_env.py
python/src/: lib.rs
python/src/yggdrasil/: __init__.py  _http_pool.py  cli.py  cy.py  disposable.py  example.py  exceptions.py  lazy_imports.py  logging.py  rs.py  rust_accel.py  url.py  version.py
python/tests/: README.md  RUNNING_TESTS.md  __init__.py  conftest.py  test_array_cast.py  test_arrow_cast.py  test_data_cast.py  test_dataclass_methods.py  test_delta.py  test_delta_io.py  test_example.py  test_polars_integration.py  test_python_arrow.py  test_python_defaults.py  test_reader_writer.py  test_scalar_cast.py
python/tests/libutils/: __init__.py  test_arrow_utils.py  test_fake_module.py  test_numpy_pandas_utils.py  test_polars_utils.py  test_py_utils.py  test_spark_utils.py
python/tests/test_yggdrasil/: test_disposable.py  test_exceptions.py
python/tests/types/: test_binary_fields.py  test_nested_fields.py  test_numeric_fields.py  test_scalar_fields.py  test_temporal_fields.py
python/tests/utils/: test_py_utils.py
python/yggdrasil/: __init__.py
rust/: Cargo.toml  README.md  pyproject.toml
rust/src/: data.rs  lib.rs
rust/src/data/: constants.rs  engine.rs  field.rs  mod.rs  schema.rs
rust/src/io/: mod.rs  url.rs
rust/ygg/: Cargo.toml
rust/ygg-core/: Cargo.toml
rust/ygg-core/src/: lib.rs
rust/ygg/src/: lib.rs  uri.rs  url.rs
(+2757 files in other folders)
