[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yggdrasil"
version = "0.1.0"
description = "Python utilities for the Yggdrasil multi-language repository."
readme = "README.md"
authors = [{ name = "Yggdrasil Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "mypy>=1.8",
    "ruff>=0.1",
]
test = [
    "pytest>=7.4",
]

[project.urls]
Homepage = "https://github.com/example/yggdrasil"
Repository = "https://github.com/example/yggdrasil"

[project.scripts]
yggdrasil = "yggdrasil.cli:main"

[tool.setuptools]
package-dir = { "" = "python/src" }

[tool.setuptools.packages.find]
where = ["python/src"]
