[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yggdrasil"
version = "0.1.0"
description = "Python utilities for the Yggdrasil multi-language repository."
readme = "README.md"
authors = [{ name = "Yggdrasil Contributors" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=13",
    "polars>=0.20.0",
    "tzdata"
]

[project.optional-dependencies]
spark = [
    "pyspark>=3",
    "delta-spark>=3"
]
pandas = [
    "pandas>=1"
]
delta = [
    "deltalake>=0.9.0"
]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/Platob/Yggdrasil"
Repository = "https://github.com/Platob/Yggdrasil"

[tool.pytest.ini_options]
testpaths = ["python/tests"]
addopts = "-ra"

[tool.setuptools]
package-dir = { "" = "python/src" }

[tool.setuptools.packages.find]
where = ["python/src"]