[build-system]
# Cython acceleration kernels for `ygg`. Mirrors the `rust/` sibling
# layout: a separate PyPI package (`yggcy`) that ships the compiled
# extension while `ygg` itself stays pure Python. `ygg` picks the
# kernels up at import time via `yggdrasil/cy.py` when the wheel is
# installed; environments without it fall back to the pure-Python
# implementations.
requires = ["setuptools>=69", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yggcy"
version = "0.1.0"
description = "Cython acceleration kernels for ygg (URL parsing, percent-encoding, …)"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Yggdrasil contributors" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Cython",
  "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest", "Cython>=3.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["_yggcy*"]
