[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ygg"
version = "0.8.38"
description = "Type-friendly utilities for moving data between Python objects, Arrow, Polars, Pandas, Spark, and Databricks"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Yggdrasil contributors" }]
keywords = ["arrow", "polars", "pandas", "spark", "databricks", "typing", "dataclass", "serialization"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Typing :: Typed",
]
dependencies = [
  "pyarrow>=20",
  "polars>=1.3",
  "xxhash",
  "orjson>=3.10",
]

[project.optional-dependencies]
# --- local dev tooling ---
dev = [
  "pytest",
  "pytest-asyncio",
  "black",
  "ruff",
  "mypy",
  "twine",
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.30",
  "mkdocs-gen-files>=0.5",
  "mkdocs-literate-nav>=0.6",
  "mkdocs-section-index>=0.3",
  "cffi",
  "xxhash",
  "pandas>=2.1",
  "polars>=1.3",
  "databricks-sdk>=0.97",
]

http = [
  "xxhash",
]

data = [
]

bigdata = [
  "pyspark>=4.0",
]

delta = [
  "deltalake>=1.0",
]

databricks = [
  "databricks-sdk>=0.107",
]

pickle = [
  "cloudpickle",
  "dill>=0.4",
  "zstandard",
  "xxhash",
  "blake3",
]

api = [
  "fastapi",
  "uvicorn",
  "pydantic>=2.10",
  "httpx",
]

node = [
  "fastapi",
  "uvicorn",
  "pydantic>=2.10",
  "psutil>=5.9",
  "httpx",
]

mongoengine = [
  "mongoengine>=0.29",
]

excel = [
  "fastexcel",
  "openpyxl",
]

[project.urls]
Homepage = "https://github.com/Platob/Yggdrasil"
Repository = "https://github.com/Platob/Yggdrasil"
Documentation = "https://platob.github.io/Yggdrasil/"

[project.scripts]
ygg = "yggdrasil.cli.main:main"

# ── setuptools ────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "strict"
markers = [
  "integration: marks tests that require a live Databricks workspace (skipped when DATABRICKS_HOST is not set)",
  "pyenv_install_integration: marks tests that pip-install a real package into the active venv (skipped when YGGDRASIL_PYENV_INSTALL_TEST is not set)",
]

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yggdrasil = ["py.typed"]

[tool.uv]
native-tls = true
