# Cargo workspace for the Rust side of ygg.
#
# The engine lives in the `ygg` crate (the single source of truth). Language
# bindings (python/, js/) depend on it by path and only marshal types.

[workspace]
resolver = "2"
members = ["ygg"]

[workspace.package]
version = "0.9.0"
edition = "2021"
rust-version = "1.74"
license = "Apache-2.0"
repository = "https://github.com/platob/yggdrasil"
homepage = "https://github.com/platob/yggdrasil"

[workspace.lints.clippy]
all = "warn"
