[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "yggrs"
# Keep in sync with python/pyproject.toml [project] version.
# The publish-native.yml CI workflow overwrites this with the canonical
# version read from python/pyproject.toml before running maturin.
version = "0.7.8"
description = "Optional Rust acceleration kernels for yggdrasil"
readme = { file = "../README.md", content-type = "text/markdown" }
license = { file = "./LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Yggdrasil contributors" }]
keywords = ["rust", "acceleration", "yggdrasil", "arrow"]
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Platob/Yggdrasil"
Repository = "https://github.com/Platob/Yggdrasil"

# ── maturin ───────────────────────────────────────────────────────────────────
[tool.maturin]
# The compiled extension installs as yggdrasil/rust.abi3.so, making it
# importable as `yggdrasil.rust` and its submodules as `yggdrasil.rust.data`,
# `yggdrasil.rust.io`, etc.  This extends the yggdrasil namespace package
# without requiring any changes to the pure-Python ygg package.
module-name = "yggdrasil.rust"
# Enable the PyO3 extension-module feature
features = ["pyo3/extension-module"]
# Strip debug symbols → smaller wheels
strip = true

