[package]
name = "clicknir"
version = "0.1.0"
edition = "2021"
description = "Cross-platform auto mouse clicker with a visual control panel."
license = "MIT"
authors = ["Clicknir contributors"]

[[bin]]
name = "clicknir"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.28"
enigo = "0.2"
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
