[package]
name = "ygg-core"
description = "ygg-core — the Rust engine behind ygg: schema-aware data interchange."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["data", "interchange", "uri", "url"]
categories = ["data-structures", "parser-implementations"]

[lib]
name = "ygg_core"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
