[package]
name = "ygg"
description = "ygg — schema-aware data interchange: the Rust engine (single source of truth)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["data", "interchange", "uri", "url"]
categories = ["data-structures", "parser-implementations"]

[lib]
name = "ygg"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
